--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^3.0.9
+  shared_preferences: ^0.5.6+3
+  flutter_secure_storage: ^3.3.1+1
+  device_preview: ^0.4.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -27,6 +31,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  pretty_dio_logger: ^1.1.0
 
 
 # For information on the generic Dart part of this file, see the
